--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
+  <body>
+    <h1>Hello World</h1>
 
-<h1>Hello World</h1>
-
-v0.1 - mike moved the index.html to the root folder.
-
-</body>
+    <p>v0.1 - mike moved the index.html to the root folder.</p>
+    <p>v0.2 -Mehruj setup local environment</p>
+  </body>
 </html>
